--- a/Calculator_v1.0/app/src/main/res/layout/activity_main.xml
+++ b/Calculator_v1.0/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
             android:fontFamily="sans-serif-medium"
-            android:onClick="buttonClick"
+            android:onClick="handleDigitButton"
             android:tag="7"
             android:text="@string/_7"
             android:textAllCaps="false"
@@ -67,7 +67,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:onClick="buttonClick"
+            android:onClick="handleDigitButton"
             android:tag="8"
             android:text="@string/_8"
             android:textAllCaps="false"
@@ -81,7 +81,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:onClick="buttonClick"
+            android:onClick="handleDigitButton"
             android:tag="9"
             android:text="@string/_9"
             android:textAllCaps="false"
@@ -95,7 +95,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:onClick="buttonClick"
+            android:onClick="handleFunctionButton"
             android:tag="/"
             android:text="@string/div"
             android:textAllCaps="false"
@@ -109,7 +109,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:onClick="buttonClick"
+            android:onClick="handleDigitButton"
             android:tag="4"
             android:text="@string/_4"
             android:textAllCaps="false"
@@ -123,7 +123,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:onClick="buttonClick"
+            android:onClick="handleDigitButton"
             android:tag="5"
             android:text="@string/_5"
             android:textAllCaps="false"
@@ -137,7 +137,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:onClick="buttonClick"
+            android:onClick="handleDigitButton"
             android:tag="6"
             android:text="@string/_6"
             android:textAllCaps="false"
@@ -151,7 +151,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:onClick="buttonClick"
+            android:onClick="handleFunctionButton"
             android:tag="*"
             android:text="@string/mul"
             android:textAllCaps="false"
@@ -165,7 +165,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:onClick="buttonClick"
+            android:onClick="handleDigitButton"
             android:tag="1"
             android:text="@string/_1"
             android:textAllCaps="false"
@@ -179,7 +179,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:onClick="buttonClick"
+            android:onClick="handleDigitButton"
             android:tag="2"
             android:text="@string/_2"
             android:textAllCaps="false"
@@ -193,7 +193,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:onClick="buttonClick"
+            android:onClick="handleDigitButton"
             android:tag="3"
             android:text="@string/_3"
             android:textAllCaps="false"
@@ -207,7 +207,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:onClick="buttonClick"
+            android:onClick="handleFunctionButton"
             android:tag="-"
             android:text="@string/min"
             android:textAllCaps="false"
@@ -221,7 +221,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:onClick="buttonClick"
+            android:onClick="handleDigitButton"
             android:tag="0"
             android:text="@string/_0"
             android:textAllCaps="false"
@@ -235,7 +235,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:onClick="buttonClick"
+            android:onClick="handleFunctionButton"
             android:tag="clear"
             android:text="@string/clear"
             android:textAllCaps="false"
@@ -249,10 +249,10 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:onClick="buttonClick"
+            android:onClick="handleFunctionButton"
             android:tag="backspace"
             android:text="@string/backspace"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/button_plus"
@@ -262,7 +262,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:onClick="buttonClick"
+            android:onClick="handleFunctionButton"
             android:tag="+"
             android:text="@string/plus"
             android:textAllCaps="false"
@@ -276,7 +276,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:onClick="buttonClick"
+            android:onClick="handleFunctionButton"
             android:tag="="
             android:text="@string/equals"
             android:textAllCaps="false"
